--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     <h1>Todoリストのホーム</h1>
     <div class="home-actions">
     <a href="/todos">TODO一覧</a>
-    <a href="/todos/new">新規作成</a>
+    <a href="/todos/new">TODOを追加する</a>
     </div>
     </div>
 </body>
